src/static/mvp.css
/* ... */
details summary {
  font-weight: bold;
  cursor: pointer;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: var(--line-height);
  text-wrap: balance;
}

mark {
  padding: 0.1rem;
}

ol li,
ul li {
  padding: 0.2rem 0;
}

p {
  padding: 0;
  width: 100%;
}

pre {
  max-width: var(--width-card-wide);
  padding: var(--space-m) 0;
}

pre code,
pre samp {
  display: block;
  max-width: var(--width-card-wide);
  padding: 0.5rem 2rem;
  white-space: pre-wrap;
}

small,
.muted {
  color: var(--color-text-secondary);
}

sup {
  background-color: var(--color-secondary);
  border-radius: var(--border-radius);
  color: var(--color-bg);
  font-size: xx-small;
  font-weight: bold;
  margin: 0.2rem;
  padding: 0.2rem 0.3rem;
  position: relative;
  top: -2px;
}

/* Links */
a {
  color: var(--color-link);
  display: inline-block;
  text-decoration: underline;
}

a:hover {
  filter: brightness(var(--hover-brightness));
}

a:active {
  filter: brightness(var(--active-brightness));
}

a b,
a em,
a i,
a strong,
button,
input[type="submit"] {
  border-radius: var(--border-radius);
  display: inline-block;
  font-size: medium;
  font-weight: bold;
  line-height: var(--line-height);
  padding: 0.2rem var(--space-m);
  width: fit-content;
}

button,
input[type="submit"] {
  font-family: var(--font-family);
}

button:hover,
input[type="submit"]:hover {
  cursor: pointer;
  filter: brightness(var(--hover-brightness));
}

button:active,
input[type="submit"]:active {
  filter: brightness(var(--active-brightness));
}

a b,
a strong,
button,
input[type="submit"] {
  background-color: var(--color-link);
  border: 2px solid var(--color-link);
  color: var(--color-bg);
}

a em,
a i {
  border: 2px solid var(--color-link);
  border-radius: var(--border-radius);
  color: var(--color-link);
  display: inline-block;
  padding: 0.2rem var(--space-m);
}

article aside a {
  color: var(--color-secondary);
}

/* Images */
figure {
  margin: 0;
  padding: 0;
}

figure img {
  max-width: 100%;
}

figure figcaption {
  color: var(--color-text-secondary);
}

/* Forms */
button:disabled,
input:disabled {
  background: var(--color-bg-secondary);
  border-color: var(--color-bg-secondary);
  color: var(--color-text-secondary);
  cursor: not-allowed;
}

button[disabled]:hover,
input[type="submit"][disabled]:hover {
  filter: none;
}

form {
  border: 1px solid var(--color-bg-secondary);
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow) var(--color-shadow);
  display: flex;
  flex-direction: column;
  gap: var(--space-m);
  max-width: var(--width-card-wide);
  min-width: var(--width-card);
  padding: var(--space-m);
  text-align: var(--justify-normal);
}

form.one-button {
  border: none;
  box-shadow: none;
  padding-left: 0;
  padding-right: 0;
}

form.no-bg {
  background: none;
  border: none;
  box-shadow: none;
  padding: 0;
}

form > * {
  margin: 0;
}

form header {
  padding: var(--space-m) 0;
}

form footer {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-s);
  justify-content: flex-start;
}

input,
select,
textarea {
  display: block;
  font-size: inherit;
  max-width: var(--width-card-wide);
}

input[type="checkbox"],
input[type="radio"] {
  display: inline-block;
  flex: 0;
  margin: 0;
}

input[type="checkbox"] + label,
input[type="radio"] + label {
  display: inline-block;
  font-weight: normal;
  position: relative;
  top: 1px;
}

input[type="range"] {
  padding: 0.4rem 0;
}

input,
select,
textarea {
  border: 1px solid var(--color-bg-secondary);
  border-radius: var(--border-radius);
  padding: 0.4rem 0.8rem;
}

input[type="text"],
input[type="password"],
input[type="email"],
textarea {
  width: 100%;
  box-sizing: border-box;
}

input[type="file"] {
  max-width: 100%;
  box-sizing: border-box;
}

textarea {
  aspect-ratio: 4 / 3;
  resize: vertical;
}

textarea[name="address"],
textarea[name="special_instructions"] {
  aspect-ratio: 4 / 1;
}

@media (min-width: 769px) {
  textarea {
    aspect-ratio: 16 / 9;
  }

  textarea[name="address"],
  textarea[name="special_instructions"] {
    aspect-ratio: 16 / 3;
  }
}

input[readonly],
textarea[readonly] {
  background-color: var(--color-bg-secondary);
}

.char-counter {
  display: block;
  text-align: right;
  color: var(--color-text-secondary);
  font-weight: normal;
}
.char-counter-warn {
  color: #c00;
}

label {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-m);
  align-items: baseline;
  font-weight: bold;
  font-size: inherit;
  max-width: var(--width-card-wide);
}

@media (max-width: 768px) {
  label {
    width: 100%;
  }
}

label > small {
  color: #666;
  font-weight: normal;
  width: 100%;
}

label > select,
label > input {
  flex: 1;
}

label > input[type="date"],
label > input[type="time"] {
  flex: 0 0 auto;
  width: auto;
}

label > select[name="quantity"],
label > select[name^="quantity_"] {
  width: 8ch;
  flex: 0 0 auto;
}

label > input[type="text"],
label > input[type="password"],
label > input[type="email"] {
  width: auto;
}

label > input[inputmode="decimal"] {
  flex: 0 0 auto;
  width: 11ch;
}

label > textarea {
  width: 100%;
}

/* Popups */
dialog {
  max-width: 90%;
  max-height: 85dvh;
  margin: auto;
  padding-block: 0;
  padding-inline: 20px;
  border: 1px solid var(--color-bg-secondary);
  border-radius: 0.5rem;
  overscroll-behavior: contain;
  scroll-behavior: smooth;
  scrollbar-width: none; /* Hide scrollbar for Firefox */
  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
  scrollbar-color: transparent transparent;
  animation: bottom-to-top 0.25s ease-in-out forwards;
}

dialog::-webkit-scrollbar {
  width: 0;
  display: none;
}

dialog::-webkit-scrollbar-track {
  background: transparent;
}

dialog::-webkit-scrollbar-thumb {
  background-color: transparent;
}

@media (min-width: 650px) {
  dialog {
    max-width: 39rem;
  }
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.5);
}
/* ... */

